put + list instead of hashset
